<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
     <TextView
         android:id="@+id/textAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/amount" />

    <EditText
        android:id="@+id/editInputAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_amount" />

    <TextView
        android:id="@+id/textPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_of_pax"/>

    <EditText
        android:id="@+id/editInputPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_pax"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ToggleButton
            android:id="@+id/tgSVS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="0.5"
            android:textOff="@string/no_svs"
            android:textOn="@string/svs"/>

        <ToggleButton
            android:id="@+id/tgGST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:checked="true"
            android:textOff="@string/no_gst"
            android:textOn="@string/gst"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount"/>

    <EditText
        android:id="@+id/editInputDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_discount"/>



    <RadioGroup
        android:id="@+id/payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cash"/>.

        <RadioButton
            android:id="@+id/PayNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/PayNow"/>

        </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/tgSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/split">
        </Button>

        <Button
            android:id="@+id/tgReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/reset">
        </Button>


    </LinearLayout>
    
    <TextView
        android:id="@+id/textBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:id="@+id/textEach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>


</LinearLayout>



